--- a/distribution/docs/src/main/resources/content/_tables/catalog.ui.config.adoc
+++ b/distribution/docs/src/main/resources/content/_tables/catalog.ui.config.adoc
@@ -179,8 +179,7 @@ TMS example (3d map support only): `{ "name": "Example TMS", "show": true, "type
 |hiddenAttributes
 |String
 |List of attributes to be hidden. NOTE: the provided values will be evaluated as JavaScript regular expressions when matched against metacard attributes.
-|^sortOrder$,
-^sortField$,
+|^sorts$,
 ^cql$,
 ^polling$,
 ^cached$
